// Jest Snapshot v1, https://jestjs.io/docs/snapshot-testing

exports[`Render child widget if no error 1`] = `
<div>
  <div>
    Normal component
  </div>
</div>
`;

exports[`Render error page if widget has error 1`] = `
<div>
  <div
    class="survey"
    id="surveyErrorPage"
    style="display: block;"
  >
    <div
      class="apptr__form"
    >
      <span
        class="_large _strong _blue"
      >
        <div>
          AnErrorOccurred
        </div>
      </span>
    </div>
    <div
      class="apptr__separator"
    />
    <div
      class="apptr__form"
    >
      <div>
        MakeSureReliableConnection
      </div>
    </div>
    <div
      class="apptr__separator"
    />
    <div
      class="apptr__form"
    >
      <div>
        ErrorPersistsWhatToDo
      </div>
    </div>
    <div
      class="apptr__separator"
    />
    <div
      class="apptr__form"
    >
      <a
        data-discover="true"
        href="/survey"
      >
        BackToSurveyPage
      </a>
    </div>
  </div>
</div>
`;

exports[`Reset the error boundary when clicking 1`] = `
<div>
  <div
    class="survey"
    id="surveyErrorPage"
    style="display: block;"
  >
    <div
      class="apptr__form"
    >
      <span
        class="_large _strong _blue"
      >
        <div>
          AnErrorOccurred
        </div>
      </span>
    </div>
    <div
      class="apptr__separator"
    />
    <div
      class="apptr__form"
    >
      <div>
        MakeSureReliableConnection
      </div>
    </div>
    <div
      class="apptr__separator"
    />
    <div
      class="apptr__form"
    >
      <div>
        ErrorPersistsWhatToDo
      </div>
    </div>
    <div
      class="apptr__separator"
    />
    <div
      class="apptr__form"
    >
      <a
        data-discover="true"
        href="/survey"
      >
        BackToSurveyPage
      </a>
    </div>
  </div>
</div>
`;

exports[`Reset the error boundary when clicking 2`] = `
<div>
  <div>
    Correct component
  </div>
</div>
`;
